2004-07-10  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-RC2-cvs-b4

        * Change: Update security message to mention secure.sh, and only
          appear on non-Windows OSes.

2004-07-10  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-RC2-cvs-b3

        * Change: Logout with relative URLs would return a redirect error
          due to doubling of the photoAlbumUrl 

2004-07-10  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-RC2-cvs-b2

	* Change: Another case of relying on the submit button for a value,
	  but it's now disabled

2004-07-10  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-RC2-cvs-b1

	* Change: Check POST vars for $include before resetting to 'albums.php'

2004-07-10  Chris Kelly <ckdake@users.sf.net> 1.4.4-RC1

	* v1.4.4 Release Candidate 1

2004-07-09  Pierre-Luc Paour  <paour@users.sourceforge.net> 1.4.4-cvs-b248

	* Fix: phpBB2 support for applets
	* Fix: gallery_remote2.php now returns correct extra_fields in album_properties
	* Fix: gallery_remote2.php no longer throws a warning when listing empty albums

2004-07-09  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b247

	* Change: ...and slideshow and search.

	* Change: Fix the validation links in each

2004-07-09  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b246

	* Change: Make gallery.footer, album.footer and photo.footer all
	  the same.  The slight differences between them caused text variation
	  in different skins.  (Besides, there's no reason they shouldn't be.)

2004-07-09  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b245

	* Change: Backwards params on eregi()

2004-07-09  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b244

	* Change: Verify !empty() for the exec() status on the check page.

2004-07-09  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b243

	* Change: Typo in AlbumItem

	* Change: Add link to find_orphans beside config wizard for admins

2004-07-09  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b242
