@@ -1,3 +1,7 @@
+2004-07-10  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-RC2-cvs-b5
+
+        * Change: Center the block-random image, to match the text
+
 2004-07-10  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-RC2-cvs-b4
 
         * Change: Update security message to mention secure.sh, and only
